--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<a><!DOCTYPE html></a>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,12 @@
     <link rel="preload" href="css/style.css" as="font" type="text/plain/" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
     <title>Analytics</title>
   </head>
   <body>
@@ -15,13 +20,22 @@
       <div class="container">
         <nav class="navbar">
           <a href="/" class="logo">
-            <img height="1" width="1" loading="lazy" src="images/logo.webp" alt="Analyitics-logo" class="logo-img" /> <span class="logo-span">Analytics</span>
+            <img height="1" width="1" loading="lazy" src="images/logo.webp" alt="Analyitics-logo" class="logo-img" />
+            <span class="logo-span">Analytics</span>
           </a>
-          <ul class="nav">
-            <li>Products</li>
-            <li>Pricing</li>
-            <li>FAQ</li>
-            <li>Blog</li>
+          <ul class="nav header-nav">
+            <li>
+              <a href="#">Products</a>
+            </li>
+            <li>
+              <a href="#">Pricing</a>
+            </li>
+            <li>
+              <a href="#">FAQ</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
           </ul>
           <div class="nav-buttons">
             <button class="button-left">Sing in</button>
@@ -31,104 +45,198 @@
       </div>
     </header>
     <div class="hero">
-      <div class="container">
+      <div class="container hero-container">
         <div class="hero-content">
           <h1>Monitor your business on real-time dashboard</h1>
-          <p class="hero-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. </p>
-          <button class="hero-button"></button>
+          <p class="hero-p">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque
+            volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam.
+          </p>
+          <button class="hero-button red-btn">Try for free</button>
         </div>
-        <img height="1" width="1" loading="lazy" src="" alt="" />
+        <img
+          class="hero-image"
+          height="1"
+          width="1"
+          loading="lazy"
+          src="images/hero-image.webp"
+          alt="Monitor your business on real-time dashboard"
+        />
       </div>
     </div>
     <main class="main">
-      <div class="container">
-        <h2></h2>
-        <p class="main-p"></p>
+      <div class="container main-container">
+        <div class="article">
+          <h2>Main Features</h2>
+        <p class="main-p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque volutpat
+          est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar risus pulvinar sit
+          amet. Id vel in nam malesuada.
+        </p>
+        </div>
         <div class="features">
-          <div class="feature-section"></div>
-          <div class="feature-section"></div>
-          <div class="feature-section"></div>
+          <div class="feature-section">
+            <i class="fas fa-clock feature-icons"></i>
+            <h5>Monitoring 24/7</h5>
+            <p class="feature-p">
+              Lorem ipsum dolor sit amet, consectetur adipis cing elit. Elementum nisi aliquet volutpat.
+            </p>
+          </div>
+          <div class="feature-section">
+            <i class="fas fa-tv feature-icons"></i>
+            <h5>Widget System</h5>
+            <p class="feature-p">
+              Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar risus pulvinar.
+            </p>
+          </div>
+          <div class="feature-section">
+            <i class="fas fa-rocket feature-icons"></i>
+            <h5>Best Performance</h5>
+            <p class="feature-p">
+              Lorem ipsum dolor sit amet, consectetur adipis cing elit. Elementum nisi aliquet volutpat.
+            </p>
+          </div>
         </div>
         <div class="main-sections">
-          <div class="section">
+          <div class="main-section">
             <div class="section-content">
-              <h2></h2>
-              <p></p>
+              <h2>Automated Reports & Widget Alerts</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque
+                volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar
+                risus pulvinar sit amet.
+              </p>
             </div>
-            <img height="1" width="1" loading="lazy" class="section-img" src="" alt="" />
+            <img
+              height="1"
+              width="1"
+              loading="lazy"
+              class="section-img"
+              src="images/automated-reports.webp"
+              alt="Automated Reports
+            & Widget Alerts"
+            />
           </div>
-          <div class="section">
+          <div class="main-section reverse-section">
             <div class="section-content">
-              <h2></h2>
-              <p></p>
+              <h2>Fully customizable to address your needs</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque
+                volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar
+                risus pulvinar sit amet.
+              </p>
             </div>
-            <img height="1" width="1" loading="lazy" class="section-img" src="" alt="" />
+            <img
+              height="1"
+              width="1"
+              loading="lazy"
+              class="section-img"
+              src="images/fully-customizable.webp"
+              alt="Fully customizable to address your needs "
+            />
           </div>
-          <div class="section">
+          <div class="main-section">
             <div class="section-content">
-              <h2></h2>
-              <p></p>
+              <h2>Pre-built Dashboard Templates</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque
+                volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar
+                risus pulvinar sit amet.
+              </p>
             </div>
-            <img height="1" width="1" loading="lazy" class="section-img" src="" alt="" />
+            <img
+              height="1"
+              width="1"
+              loading="lazy"
+              class="section-img"
+              src="images/pre-built-dashboard.webp"
+              alt="Pre-built Dashboard Templates"
+            />
           </div>
         </div>
       </div>
     </main>
     <div class="plans">
-      <div class="container">
-        <h2></h2>
-        <p></p>
-        <!-- Slider main container -->
-        <div class="swiper-container slider">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <h3></h3>
-              <p></p>
-              <span>
-                <h4></h4>
-              </span>
-              <button class="order-button"></button>
-            </div>
-            <div class="swiper-slide">
-              <h3></h3>
-              <p></p>
-              <span>
-                <h4></h4>
-              </span>
-              <button class="order-button"></button>
-            </div>
-            <div class="swiper-slide">
-              <h3></h3>
-              <p></p>
-              <span>
-                <h4></h4>
-              </span>
-              <button class="order-button"></button>
-            </div>
-            ...
+      <div class="container plans-container">
+        <div class="article">
+          <h2>Pricing Plans</h2>
+        <p class="plans-p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque volutpat
+          est.
+        </p>
+        </div>
+        <div class="plans-sections">
+          <div class="plans-section">
+            <h3>Starter</h3>
+            <p>up to 3 users</p>
+            <div class="line"></div>
+            <span class="price">
+              <h4><i class="fas fa-dollar-sign dollar"></i>29</h4>
+              per month
+            </span>
+            <button class="order-button">Order</button>
           </div>
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
+          <div class="plans-section">
+            <h3>Standard</h3>
+            <p>up to 20 users</p>
+            <div class="line"></div>
+            <span class="price">
+              <h4><i class="fas fa-dollar-sign dollar"></i>99</h4>
+              per month
+            </span>
+            <button class="order-button">Order</button>
+          </div>
+          <div class="plans-section">
+            <h3>Premium</h3>
+            <p>up to 200 users</p>
+            <div class="line"></div>
+            <span class="price">
+              <h4><i class="fas fa-dollar-sign dollar"></i>299</h4>
+              per month
+            </span>
+            <button class="order-button">Order</button>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="footer">
       <div class="container">
         <nav class="navbar">
-          <a href="" class="logo">
-            <img height="1" width="1" loading="lazy" src="images/logo.webp" alt="Analyitics-logo" class="logo-img" /> <span class="logo-span">Analytics</span>
+          <a href="#" class="logo">
+            <img
+              height="1"
+              width="1"
+              loading="lazy"
+              src="images/footer-logo.webp"
+              alt="Analyitics-logo"
+              class="logo-img"
+            />
+            <span class="logo-span footer-logo">Analytics</span>
           </a>
           <ul class="nav">
-            <li>Products</li>
-            <li>Pricing</li>
-            <li>FAQ</li>
-            <li>Blog</li>
+            <li>
+              <a href="#">Products</a>
+            </li>
+            <li>
+              <a href="#">Pricing</a>
+            </li>
+            <li>
+              <a href="#">FAQ</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
           </ul>
           <ul class="sci">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
           </ul>
         </nav>
       </div>
