--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="container main-container">
         <div class="article">
           <h2>Main Features</h2>
-        <p class="main-p">
+        <p class="article-p main-p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque volutpat
           est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar risus pulvinar sit
           amet. Id vel in nam malesuada.
@@ -101,7 +101,7 @@
           <div class="main-section">
             <div class="section-content">
               <h2>Automated Reports & Widget Alerts</h2>
-              <p>
+              <p class="content-p">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque
                 volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar
                 risus pulvinar sit amet.
@@ -120,7 +120,7 @@
           <div class="main-section reverse-section">
             <div class="section-content">
               <h2>Fully customizable to address your needs</h2>
-              <p>
+              <p class="content-p">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque
                 volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar
                 risus pulvinar sit amet.
@@ -138,7 +138,7 @@
           <div class="main-section">
             <div class="section-content">
               <h2>Pre-built Dashboard Templates</h2>
-              <p>
+              <p class="content-p">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque
                 volutpat est. Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar
                 risus pulvinar sit amet.
@@ -160,7 +160,7 @@
       <div class="container plans-container">
         <div class="article">
           <h2>Pricing Plans</h2>
-        <p class="plans-p">
+        <p class="article-p feature-p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque volutpat
           est.
         </p>
@@ -201,19 +201,19 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <nav class="navbar">
-          <a href="#" class="logo">
+        <nav class="navbar footer-navbar">
+          <a href="#" class="logo ">
             <img
               height="1"
               width="1"
               loading="lazy"
               src="images/footer-logo.webp"
               alt="Analyitics-logo"
-              class="logo-img"
+              class="logo-img footer-logo-img"
             />
             <span class="logo-span footer-logo">Analytics</span>
           </a>
-          <ul class="nav">
+          <ul class="nav footer-nav">
             <li>
               <a href="#">Products</a>
             </li>
